# TAA3040

./: .gitignore  CMakeLists.txt  LICENSE  idf_component.yml
docs/: Doxyfile  conf.py  index.rst  overview.rst  requirements.txt
example/: main.c
include/: taa3040.h  taa3040_registers.h  taa3040_types.h
src/: taa3040.c
